Done practice 3 (with changes)

--- a/python_practice_3.ipynb
+++ b/python_practice_3.ipynb
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "dlVjc-Nu4bmb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11fbb397-3e5a-4a58-9b32-c45dd461edab"
+        "outputId": "74cc41de-cc8c-4976-dc93-22786b82bdc9"
       },
       "outputs": [
         {
@@ -59,11 +59,10 @@
         "number = 13\n",
         "if (number % 2) == 0:\n",
         "  number *= 2\n",
-        "  print(number)\n",
         "else:\n",
         "  number *= 3\n",
         "  number += 1\n",
-        "  print(number)"
+        "print(number)"
       ]
     },
     {
@@ -334,20 +333,18 @@
     {
       "cell_type": "code",
       "source": [
-        "n = 0\n",
-        "while n <= 20:\n",
+        "for n in range(21):\n",
         "  if n % 2 == 1:\n",
-        "    print(n)\n",
-        "  n += 1"
+        "    print(n)"
       ],
       "metadata": {
         "id": "aCSRYA6s7tkF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6adcd852-45f2-4bab-90fb-57bef1553f15"
+        "outputId": "34f0247f-3ec9-4fc7-85fe-b36571ce1feb"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +438,7 @@
         },
         "outputId": "4bec46ad-ba67-42d8-8b73-e492e20dcb77"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +481,7 @@
         },
         "outputId": "656cee92-070a-4f53-df47-271e96a3bee2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +536,7 @@
         },
         "outputId": "b9b4b709-85b3-43d0-ed7b-073c5bb1bb93"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
